# gopskit

./: .bazelrc  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .releaserc  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  git.sh  go.mod  go.sum  log.sh  package.sh  release-please-config.json
.github/: AUTHORS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yaml  stale.yaml  superlint.yaml  testing.yaml
cmd/amtrac/: BUILD.bazel  main.go
cmd/fillr/: BUILD.bazel  main.go
cmd/opsctl/: BUILD.bazel  main.go
cmd/plattr/: BUILD.bazel  main.go
cmd/ssolo/: BUILD.bazel  main.go
cmd/steppa/: BUILD.bazel  main.go
cmd/vaultr/: BUILD.bazel  main.go
cmd/waltr/: BUILD.bazel  main.go
docs/: CONTRIBUTING.md  TODO.md
internal/fillr/app/: BUILD.bazel  app.go
internal/fillr/cmd/: BUILD.bazel  cmd.go
internal/opsctl/cmd/: BUILD.bazel  cmd.go
internal/plattr/app/: BUILD.bazel  app.go
internal/plattr/cmd/: BUILD.bazel  aws.go  cloudflare.go  cmd.go  generate.go  generate_dhparams.go  generate_passphrase.go  generate_smallstep.go  hetzner.go  longhorn.go  nginx.go
internal/ssolo/app/: BUILD.bazel  app.go
internal/ssolo/cmd/: BUILD.bazel  cmd.go  gitlab.go  init.go
internal/ssolo/util/: keycloak.go
internal/steppa/app/: BUILD.bazel  app.go
internal/steppa/cmd/: BUILD.bazel  cmd.go
internal/vaultr/cmd/: BUILD.bazel  cmd.go
internal/waltr/app/: BUILD.bazel  app.go
internal/waltr/cmd/: BUILD.bazel  cmd.go  configure.go  high-availability.go  init.go  methods.go  mounts.go  prepare.go  prepare_gitlab.go  prepare_keycloak.go  test.go  transit.go
internal/waltr/util/: BUILD.bazel  shell.go  vault.go
pkg/api/: BUILD.bazel  api.go  tls.go
pkg/api/keycloak/: BUILD.bazel  check.go  create.go  errors.go  get.go  keycloak.go  util.go
pkg/api/vault/: BUILD.bazel  vault.go
pkg/buffers/: BUILD.bazel  buffers.go
pkg/cmd/: BUILD.bazel  cmd.go
pkg/common/: BUILD.bazel  app.go
pkg/core/: BUILD.bazel  api.go  core.go  env.go
pkg/env/: BUILD.bazel  env.go
pkg/errors/: BUILD.bazel  errors.go
pkg/filesystem/: BUILD.bazel  directories.go  files.go  filesystem.go  git.go
pkg/fs/: BUILD.bazel  directories.go  files.go  fs.go  git.go  paths.go  paths_darwin.go
pkg/fsi/: BUILD.bazel  fsi.go  paths.go  paths_linux.go  paths_test.go  paths_windows.go
pkg/helpers/: BUILD.bazel  crypto.go  merge.go  pointers.go  primitives.go  slices.go
pkg/kube/: BUILD.bazel  apply.go  create.go  exec.go  get.go  kube.go  port_forward.go  search.go
pkg/kube/kubeutil/: BUILD.bazel  kubeutil.go
pkg/kv/: BUILD.bazel  format.go  kv.go  op.go  types.go
pkg/log/: BUILD.bazel  log.go
pkg/logger/: BUILD.bazel  logger.go
pkg/platform/: BUILD.bazel  info.go  platform.go  platform_darwin.go  platform_linux.go  platform_test.go  platform_windows.go
pkg/proc/: BUILD.bazel  errors.go  proc.go  util.go
pkg/stamp/: BUILD.bazel  stamp.go
pkg/tools/: BUILD.bazel  helm.go  helmfile.go  smallstep.go  tools.go
pkg/util/: BUILD.bazel  crypto.go  merge.go  primitives.go
scripts/: libtree  release.sh  status.sh
scripts/lib/: array.sh  paths.sh  perm.sh  stdout.sh  utils.sh
tools/: version.bzl
