# taken from: https://github.com/jankremlacek/go-bazel/blob/main/BUILD.bazel
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/fmjstudios/gopskit
gazelle(name = "gazelle")

# make sure that others can import either using the import or go_default_library naming conventions
# gazelle:go_naming_convention import_alias
