"""gopskit is a custom toolkit centered around the FMJ Studios Operations Kubernetes Cluster"""

module(
    name = "gopskit",
    repo_name = "com_github_fmjstudios_gopskit",
)

bazel_dep(name = "rules_go", version = "0.49.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.38.0", repo_name = "bazel_gazelle")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.6")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_go_resty_resty_v2",
    "com_github_hashicorp_vault_client_go",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
    "com_github_vmware_labs_yaml_jsonpath",
    "in_gopkg_yaml_v3",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_cli_runtime",
    "io_k8s_client_go",
    "org_golang_x_mod",
    "org_golang_x_sync",
    "org_golang_x_text",
    "org_uber_go_zap",
)

# DO NOT REMOVE! Cannot build with Resty without this
# ref: https://github.com/bazelbuild/bazel-gazelle/issues/1885
go_deps.gazelle_override(
    path = "github.com/go-resty/resty/v2",
)
