load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "amtrac_lib",
    srcs = ["main.go"],
    importpath = "github.com/fmjstudios/gopskit/cmd/amtrac",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "amtrac",
    embed = [":amtrac_lib"],
    visibility = ["//visibility:public"],
)
