load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fillr_lib",
    srcs = ["main.go"],
    importpath = "github.com/fmjstudios/gopskit/cmd/fillr",
    visibility = ["//visibility:private"],
    x_defs = {
        "github.com/fmjstudios/gopskit/pkg/stamp.Version": module_version(),
        "github.com/fmjstudios/gopskit/pkg/stamp.BuildDate": "{BUILD_DATE}",
        "github.com/fmjstudios/gopskit/pkg/stamp.CommitSHA": "{GIT_COMMIT_SHA}",
        "github.com/fmjstudios/gopskit/pkg/stamp.Branch": "{GIT_BRANCH}",
        "github.com/fmjstudios/gopskit/pkg/stamp.Platform": "{PLATFORM}",
        "github.com/fmjstudios/gopskit/pkg/stamp.GoVersion": "{GO_VERSION}",
    },
    deps = [
        "//internal/fillr/app",
        "//internal/fillr/cmd",
        "//pkg/stamp",
    ],
)

go_binary(
    name = "fillr",
    embed = [":fillr_lib"],
    visibility = ["//visibility:public"],
)
