load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "opsctl_lib",
    srcs = ["main.go"],
    importpath = "github.com/fmjstudios/gopskit/cmd/opsctl",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/opsctl/cmd",
        "//pkg/stamp",
    ],
)

go_binary(
    name = "opsctl",
    out = "opsctl",
    embed = [":opsctl_lib"],
    visibility = ["//visibility:public"],
)
