load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "plattr_lib",
    srcs = ["main.go"],
    importpath = "github.com/fmjstudios/gopskit/cmd/plattr",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/plattr/app",
        "//internal/plattr/cmd",
        "//pkg/stamp",
    ],
)

go_binary(
    name = "plattr",
    embed = [":plattr_lib"],
    visibility = ["//visibility:public"],
)
