load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "steppa_lib",
    srcs = ["main.go"],
    importpath = "github.com/fmjstudios/gopskit/cmd/steppa",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "steppa",
    embed = [":steppa_lib"],
    visibility = ["//visibility:public"],
)
