load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "vaultr_lib",
    srcs = ["main.go"],
    importpath = "github.com/fmjstudios/gopskit/cmd/vaultr",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/vaultr/cmd",
        "//pkg/stamp",
    ],
)

go_binary(
    name = "vaultr",
    out = "vaultr",
    embed = [":vaultr_lib"],
    visibility = ["//visibility:public"],
)
