load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "buffers",
    srcs = ["buffers.go"],
    importpath = "github.com/fmjstudios/gopskit/pkg/buffers",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":buffers",
    visibility = ["//visibility:public"],
)
