load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = ["cmd.go"],
    importpath = "github.com/fmjstudios/gopskit/pkg/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/errors",
        "//pkg/filesystem",
    ],
)

alias(
    name = "go_default_library",
    actual = ":cmd",
    visibility = ["//visibility:public"],
)
