load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "common",
    srcs = ["app.go"],
    importpath = "github.com/fmjstudios/gopskit/pkg/common",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cmd",
        "//pkg/kube",
        "//pkg/logger",
        "//pkg/platform",
        "//pkg/stamp",
        "@com_github_spf13_cobra//:cobra",
    ],
)

alias(
    name = "go_default_library",
    actual = ":common",
    visibility = ["//visibility:public"],
)
