load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "core",
    srcs = ["core.go"],
    importpath = "github.com/fmjstudios/gopskit/pkg/core",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/errors",
        "//pkg/filesystem",
    ],
)

alias(
    name = "go_default_library",
    actual = ":core",
    visibility = ["//visibility:public"],
)
