load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "env",
    srcs = ["env.go"],
    importpath = "github.com/fmjstudios/gopskit/pkg/env",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":env",
    visibility = ["//visibility:public"],
)
