load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "errors",
    srcs = ["errors.go"],
    importpath = "github.com/fmjstudios/gopskit/pkg/errors",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":errors",
    visibility = ["//visibility:public"],
)
