load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "filesystem",
    srcs = [
        "filesystem.go",
        "types.go",
    ],
    importpath = "github.com/fmjstudios/gopskit/pkg/filesystem",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":filesystem",
    visibility = ["//visibility:public"],
)
