load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "fsi",
    srcs = [
        "directories.go",
        "files.go",
        "fsi.go",
        "git.go",
        "paths.go",
        "paths_darwin.go",
        "paths_linux.go",
        "paths_windows.go",
    ],
    importpath = "github.com/fmjstudios/gopskit/pkg/fsi",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/helpers",
        "@io_k8s_client_go//util/homedir",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_text//cases",
        "@org_golang_x_text//language",
    ],
)

go_test(
    name = "fsi_test",
    srcs = ["paths_test.go"],
    embed = [":fsi"],
    deps = ["@com_github_stretchr_testify//assert"],
)

alias(
    name = "go_default_library",
    actual = ":fsi",
    visibility = ["//visibility:public"],
)
