load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "helpers",
    srcs = [
        "crypto.go",
        "merge.go",
        "primitives.go",
        "slices.go",
    ],
    importpath = "github.com/fmjstudios/gopskit/pkg/helpers",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proc",
        "@com_github_luzifer_go_dhparam//:go-dhparam",
    ],
)

alias(
    name = "go_default_library",
    actual = ":helpers",
    visibility = ["//visibility:public"],
)
