load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "kube",
    srcs = [
        "apply.go",
        "create.go",
        "exec.go",
        "get.go",
        "kube.go",
        "port_forward.go",
    ],
    importpath = "github.com/fmjstudios/gopskit/pkg/kube",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/filesystem",
        "//pkg/platform",
        "@io_k8s_api//apps/v1:apps",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_api//networking/v1:networking",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_apimachinery//pkg/util/httpstream",
        "@io_k8s_cli_runtime//pkg/genericclioptions",
        "@io_k8s_client_go//dynamic",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//tools/clientcmd",
        "@io_k8s_client_go//tools/portforward",
        "@io_k8s_client_go//tools/remotecommand",
        "@io_k8s_client_go//transport/spdy",
    ],
)

alias(
    name = "go_default_library",
    actual = ":kube",
    visibility = ["//visibility:public"],
)
