load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "common",
    srcs = ["platform.go"],
    importpath = "github.com/fmjstudios/gopskit/pkg/common",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":platform",
    visibility = ["//visibility:public"],
)

go_library(
    name = "platform",
    srcs = [
        "info.go",
        "platform.go",
        "platform_linux.go",
        "platform_windows.go",
    ],
    importpath = "github.com/fmjstudios/gopskit/pkg/platform",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/logger",
        "@io_k8s_client_go//util/homedir",
    ],
)
