load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "platform",
    srcs = [
        "info.go",
        "platform.go",
        "platform_darwin.go",
        "platform_linux.go",
        "platform_windows.go",
    ],
    importpath = "github.com/fmjstudios/gopskit/pkg/platform",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_client_go//util/homedir",
        "@org_golang_x_text//cases",
        "@org_golang_x_text//language",
    ],
)

alias(
    name = "go_default_library",
    actual = ":platform",
    visibility = ["//visibility:public"],
)

go_test(
    name = "platform_test",
    srcs = ["platform_test.go"],
    embed = [":platform"],
    deps = ["@com_github_stretchr_testify//assert"],
)
