load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "stamp",
    srcs = ["stamp.go"],
    importpath = "github.com/fmjstudios/gopskit/pkg/stamp",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":stamp",
    visibility = ["//visibility:public"],
)
