load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tools",
    srcs = [
        "helmfile.go",
        "smallstep.go",
    ],
    importpath = "github.com/fmjstudios/gopskit/pkg/tools",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":tools",
    visibility = ["//visibility:public"],
)
