load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tools",
    srcs = [
        "helm.go",
        "helmfile.go",
        "smallstep.go",
        "tools.go",
    ],
    importpath = "github.com/fmjstudios/gopskit/pkg/tools",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/fs",
        "//pkg/helpers",
        "//pkg/proc",
        "@com_github_go_resty_resty_v2//:resty",
        "@com_github_vmware_labs_yaml_jsonpath//pkg/yamlpath",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_x_mod//semver",
    ],
)

alias(
    name = "go_default_library",
    actual = ":tools",
    visibility = ["//visibility:public"],
)
