load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "util",
    srcs = ["merge.go"],
    importpath = "github.com/fmjstudios/gopskit/pkg/util",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":util",
    visibility = ["//visibility:public"],
)
