load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "util",
    srcs = [
        "crypto.go",
        "merge.go",
    ],
    importpath = "github.com/fmjstudios/gopskit/pkg/util",
    visibility = ["//visibility:public"],
    deps = ["//pkg/cmd"],
)

alias(
    name = "go_default_library",
    actual = ":util",
    visibility = ["//visibility:public"],
)
