load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = ["app.go"],
    importpath = "github.com/fmjstudios/gopskit/internal/fillr/app",
    visibility = ["//:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":app",
    visibility = ["//:__subpackages__"],
)
